# context_hub

./: .gitignore  LICENSE  README.md  pyproject.toml
context_hub/: cli.py  flomo.py  graph.py  index.py  obsidian.py  render.py  tree.py  visualize.py
context_hub/skills/build-graph/: SKILL.md
context_hub/skills/build-graph/scripts/: aggregate_handles.py  aggregate_hierarchy.py  aggregate_summaries.py  build_l1.py  prepare_batches.py  prepare_candidates.py  prepare_communities.py
context_hub/skills/cluster-context-hub/: SKILL.md
context_hub/skills/cluster-context-hub/references/: phase1_discovery.md  phase2_assignment.md  phase4_subcluster.md  phase5_scope.md
context_hub/skills/cluster-context-hub/scripts/: aggregate.py  audit_distribution.py  extract_oversized.py  inspect_hub.py  make_batches.py  merge_subclusters.py  sample_corpus.py  scaffold_scopes.py
context_hub/skills/context-hub/: SKILL.md
docs/superpowers/specs/: 2026-04-25-context-hub-design.md
tests/: conftest.py  test_e2e.py  test_flomo.py  test_obsidian.py  test_render.py  test_tree_apply.py  test_tree_diff.py
